# palladium-a

./: .gitignore  ARCHITECTURE.md  BOOTSTRAP_ACHIEVED.md  BOOTSTRAP_ACHIEVEMENT.md  BOOTSTRAP_VERIFICATION_REPORT.md  CLAUDE.md  CLEANUP_AND_PUSH_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FEATURES.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MILESTONES.md  Makefile  PROGRESS.md  PROJECT_SUMMARY.md  Palladium_0_6.md  README-crate.md  README.md  REAL_BOOTSTRAP_DEMO.md  RELEASE_NOTES_v0.1.md  RELEASE_NOTES_v0.2.md  TODO_v0.1.md  Turing.md  Von.md  avp_headquarters_drama.md  bootstrap_demo.sh  bootstrap_proof.md  build.sh  hello_static  hello_test  palladium_vs_rust_comparison.md  quick_test.sh  run_full_tests.sh  splay_tree_palladium.pd  test_async_simple  test_collections_minimal  test_effects_demo.pd  (+12 more)
.github/: dependabot.yml  pull_request_template.md
benchmarks/: README.md  analyze_results.py  run_benchmarks.sh
bootstrap/: BOOTSTRAP_COMPLETE.md  FINAL_BOOTSTRAP_REPORT.md  README.md  actual_compiler.pd  ast_builder_v1.pd  codegen.pd  enhanced_lexer_v1.pd  final_compiler.pd  mini_compiler.pd  minimal_working_compiler.pd  simple_lexer_v1.pd  simple_module_demo.pd  typechecker.pd
bootstrap2/: codegen.pd  pdc.pd
bootstrap3/: BOOTSTRAP_ACHIEVED.md  ast.pd  codegen_minimal.pd  minimal_compiler.pd  simple_test.pd  test_simple_array.pd  test_tiny.sh  tiny_compiler.pd  tiny_v13_simple.pd  tiny_v6.pd  tiny_v6_debug.pd  tiny_v7.pd  tiny_v8.pd
compiler/: README.md
compiler/rust/: Cargo.toml  lib.rs
compiler/rust/codegen/: llvm_backend.rs  mod.rs
compiler/rust/driver/: mod.rs
compiler/rust/effects/: mod.rs
compiler/rust/errors/: suggestions.rs
compiler/rust/lexer/: scanner.rs  token.rs
compiler/rust/macros/: expander.rs
compiler/rust/optimizer/: simplify.rs
compiler/rust/ownership/: borrow_checker.rs
compiler/rust/package/: mod.rs
compiler/rust/parser/: mod.rs
compiler/rust/resolver/: mod.rs
compiler/rust/runtime/: mod.rs
compiler/rust/tests/: test_unsafe.rs
compiler/rust/typeck/: exhaustiveness.rs  mod.rs  suggestions.rs
coverage_report/: combined_coverage.html
docs/: BOOTSTRAP_INTERNALS.md  BOOTSTRAP_PROGRESS.md  BOOTSTRAP_PROGRESS_REPORT.md  BOOTSTRAP_TUTORIAL.md  CHANGELOG.md  GETTING_STARTED.md  MODULE_SYSTEM_DESIGN.md  README.md  SELF_HOSTING_DEMO.md  SELF_HOSTING_GUIDE.md  dashboard.html  grammar.ebnf  semantics.md
examples/: README.md  arithmetic.pd  array_sum.pd  arrays_basic.pd  bubble_sort.pd  complex_struct.pd  fibonacci_iterative.pd  file_io_design.pd  final_demo.pd  function_returns.pd  generic_identity_test.pd  generics_demo.pd  hello.pd  immutable_error.pd  mutability.pd  nested_loops.pd  showcase_new_features.pd  simple_generic_test.pd  simple_generics.pd  simple_pattern_match.pd  simple_struct.pd  stress_test_large.pd  string_concat_demo.pd  string_design.pd  struct_design.pd  test_imports.pd  test_module_import.pd  test_module_import_simple.pd  test_multi_module.pd  test_option_complete.pd  test_string_utils.pd  while_loop.pd  wildcard_match.pd  working_features_demo.pd
examples_v0_2/: binary_search_simulation.pd
reports/: 2024-12-project-status.md  async_effects_system_20250119.md  benchmark_suite_complete_20250119.md  bootstrap_100_complete_2025_06_17.md  bootstrap_integration_20250619.md  bootstrap_roadmap.md  bootstrap_status_20250617_self_hosting_test.md  bootstrap_status_2025_01_20.md  cleanup_summary_2025_06_17.md  compiler_improvements_20250118.md  daily_progress_20250119.md  dead_code_test_failures.md  documentation_cleanup_20250120.md  final_status_2025_06_17.md  final_test_report.md  immediate_next_steps_20250119.md  language_specification_20250119.md  llvm_backend_progress_20250119.md  llvm_integration_complete_20250119.md  lsp_implementation_20250119.md  milestone_roadmap_20250119.md  optimizer_test_coverage_report.md  ownership_system_implemented_20250618.md  package_manager_build_system_20250119.md  palladium_book_complete_20250119.md  palladium_self_hosting_20250619.md  project_status_20250118.md  project_status_20250119.md  project_status_2025_06_17_korean.md  project_status_bird_eye_view_20250118.md  project_status_comprehensive_20250119.md  projectplan.md  quick_summary.md  reference_types_implementation_20250618.md  repo_reorganization_20250119.md  rust_compiler_missing_features_20250618.md  self_hosting_achieved_20250618_0734.md  status_2025_06_17_structs_added.md  status_report_2025_01_16.md  status_report_2025_01_16_final.md  (+10 more)
scripts/: bootstrap_full_test.sh  compile_llvm.sh  pd_coverage.sh  reorganize_repo.sh  run_tests.sh  test_bootstrap.sh  test_runner.sh  verify_bootstrap.sh
src/: cli.rs  lib.rs  main.rs
src_pd/: README.md  build_self_hosting.sh  lexer.pd  lexer_fixed.pd  typeck.pd
stdlib/: README.md  prelude.pd
tests/: 01_lexical_comments.pd  01_lexical_literals.pd  02_types_arrays.pd  02_types_enums.pd  README.md  (+134 more)
(+460 files in other folders)
