[package]
name = "alan-von-palladium"
version = "0.1.1"
edition = "2021"
authors = ["z@2lab.ai"]
description = "The Alan von Palladium Programming Language - A systems programming language combining Turing's correctness with von Neumann's performance"
documentation = "https://github.com/labforadvancedstudy/palladium-a"
homepage = "https://github.com/labforadvancedstudy/palladium-a"
repository = "https://github.com/labforadvancedstudy/palladium-a"
readme = "README.md"
keywords = ["compiler", "programming-language", "systems-programming", "palladium"]
categories = ["compilers", "development-tools", "command-line-utilities"]
license = "MIT"
exclude = [
    "tests/*",
    "benches/*",
    "examples/*.pd",
    ".github/*",
    "bootstrap/*",
    "docs/*",
    "scripts/*",
    "*.pd",
    "coverage_report/*",
    "build/*",
    "reports/*",
    "archive/*",
    "benchmarks/*",
    "test_*",
    "*.sh",
    "final_test_report.md",
    "projectplan.md",
    "test_results_summary.md",
    "src_pd/*",
    "stdlib/*",
    "tools/*",
    "hello_*",
    "quick_test.sh",
    "run_full_tests.sh",
    "test_runner.sh",
]

[lib]
name = "palladium"

[[bin]]
name = "pdc"
path = "src/main.rs"

[[bin]]
name = "pdm"
path = "src/bin/pdm.rs"

[[bin]]
name = "pls"
path = "src/bin/pls.rs"

[dependencies]
# Core dependencies
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"

# Lexer and Parser
logos = "0.14"
chumsky = "0.9"

# Code generation
# inkwell = { version = "0.4", features = ["llvm17-0"] } # TODO: Enable when LLVM is installed
llvm-sys = { version = "170", optional = true }

# Data structures
indexmap = "2.2"
petgraph = "0.6"

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
colored = "2.1"

# Performance profiling
criterion = { version = "0.5", optional = true }
flamegraph = { version = "0.6", optional = true }

# Package management
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
chrono = "0.4"
tempfile = "3.8"

[dev-dependencies]
insta = "1.38"
proptest = "1.4"
criterion = "0.5"

[[bench]]
name = "compiler_bench"
path = "benchmarks/rust/compiler_bench.rs"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
debug = true

[features]
default = []
llvm = ["llvm-sys"]
profile = ["criterion", "flamegraph"]