[package]
name = "palladium"
version = "0.1.0"
edition = "2021"
authors = ["Alan von Palladium Team"]
description = "Alan von Palladium - Where Legends Compile"
repository = "https://github.com/alan-von-palladium/palladium"
license = "MIT"

[[bin]]
name = "pdc"
path = "src/main.rs"

[dependencies]
# Core dependencies
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Lexer and Parser
logos = "0.14"
chumsky = "0.9"

# Code generation
# inkwell = { version = "0.4", features = ["llvm17-0"] } # TODO: Enable when LLVM is installed

# Data structures
indexmap = "2.2"
petgraph = "0.6"

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
colored = "2.1"

# Package management
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[dev-dependencies]
insta = "1.38"
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
debug = true